--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="title" content="Las Planchitas" />
     <meta
       name="description"
-      content="This is a Restaurant html template made by codewithsadee"
+      content="Es una página de restaurante hecho por Evelyn"
     />
 
     <!-- 
