--- a/index.html
+++ b/index.html
@@ -368,9 +368,7 @@
             <h2 class="headline-1 section-title">Ofrecemos algo de primera categoría</h2>
 
             <p class="section-text">
-              Lorem Ipsum is simply dummy text of the printing and typesetting
-              industry lorem Ipsum has been the industrys standard dummy text
-              ever.
+              Nuestra misión es superar las expectativas de nuestros clientes al proporcionar productos y servicios de la más alta calidad. Nos dedicamos a brindar una experiencia excepcional que refleje nuestro compromiso con la excelencia en cada detalle.
             </p>
 
             <ul class="grid-list">
@@ -503,11 +501,10 @@
               </h2>
 
               <p class="section-text">
-                Lorem Ipsum is simply dummy text of the printingand typesetting
-                industry lorem Ipsum has been the industrys standard dummy text
-                ever since the when an unknown printer took a galley of type and
-                scrambled it to make a type specimen book It has survived not
-                only five centuries, but also the leap into.
+                En VICTORIN, nuestra misión es crear una experiencia culinaria excepcional
+                 que deleite los sentidos, fomente la unión y celebre la diversidad gastronómica.
+                  Nos comprometemos a ofrecer a nuestros clientes no solo deliciosas comidas,
+                   sino también un ambiente acogedor y un servicio atento que los haga sentir como en casa.
               </p>
 
               <div class="contact-label">Reserva para la</div>
@@ -607,9 +604,8 @@
               <h2 class="headline-1 section-title">Pollo a la parrilla</h2>
 
               <p class="section-text">
-                Lorem Ipsum is simply dummy text of the printingand typesetting
-                industry lorem Ipsum has been the industrys standard dummy text
-                ever since the when an unknown printer took a galley of type.
+                El pollito a la parrilla tiene un sabor único que paso de
+                generación en generación.
               </p>
 
               <div class="wrapper">
@@ -676,9 +672,8 @@
                 <h2 class="headline-1 section-title">La Tradicional Planchita</h2>
   
                 <p class="section-text">
-                  Lorem Ipsum is simply dummy text of the printingand typesetting
-                  industry lorem Ipsum has been the industrys standard dummy text
-                  ever since the when an unknown printer took a galley of type.
+                  La tradicional planchita es una de los platos típicos emblematicos
+                  de la ciudad de Cochabamba, en esta ocación traemos a usted para su degustación.
                 </p>
   
                 <div class="wrapper">
@@ -860,7 +855,7 @@
                   <div>
                     <div class="title-wrapper">
                       <h3 class="title-3">
-                        <a href="#" class="card-title">Lazaña</a>
+                        <a href="#" class="card-title">Tallarin</a>
                       </h3>
 
                       <span class="span title-2">Bs. 40.00</span>
@@ -1255,11 +1250,12 @@
                 ></textarea>
 
                 <button type="submit" class="btn btn-secondary">
-                  <span class="text text-1">Reserva una mesa</span>
-
+                  <a  href="tel:+59168266472"><span class="text text-1">Reserva una mesa</span></a>
+                  
+                  <a  href="tel:+59168266472">
                   <span class="text text-2" aria-hidden="true"
                     >Reserva una mesa</span
-                  >
+                  ></a>
                 </button>
               </form>
 
@@ -1327,7 +1323,7 @@
                   <h3 class="title-2 card-title">Higiene en la cocina</h3>
 
                   <p class="label-1 card-text">
-                    Lorem Ipsum is simply dummy printing and typesetting.
+                    La higienes es la base fundamental de un buen servicio.
                   </p>
                 </div>
               </li>
@@ -1347,7 +1343,7 @@
                   <h3 class="title-2 card-title">Ambiente fresco</h3>
 
                   <p class="label-1 card-text">
-                    Lorem Ipsum is simply dummy printing and typesetting.
+                    Nos esforzamos por ser el refugio perfecto para aquellos que buscan un momento de serenidad en medio del ajetreo de la vida diaria.
                   </p>
                 </div>
               </li>
@@ -1367,7 +1363,7 @@
                   <h3 class="title-2 card-title">Chefs calificados</h3>
 
                   <p class="label-1 card-text">
-                    Lorem Ipsum is simply dummy printing and typesetting.
+                    Los chefs y cocineros son responsables de garantizar la seguridad alimentaria en sus restaurantes o negocios de catering. Si un cliente se enferma debido a alimentos contaminados o mal preparados, el chef podría enfrentar demandas por lesiones personales.
                   </p>
                 </div>
               </li>
@@ -1387,7 +1383,7 @@
                   <h3 class="title-2 card-title">Fiesta y eventos</h3>
 
                   <p class="label-1 card-text">
-                    Lorem Ipsum is simply dummy printing and typesetting.
+                    Contamos con eventos en vivo y con grupos que vienen continuamente.
                   </p>
                 </div>
               </li>
